Update test change instruction list to set